[gd_scene load_steps=8 format=2]

[ext_resource path="res://BattleFields/MultiHitBattleField.gd" type="Script" id=1]
[ext_resource path="res://BattleFields/BaseBattleField.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 30 )

[node name="MultiHitBattleField" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="NormalZone" type="Area2D" parent="Field" index="0"]
position = Vector2( 0, 3 )

[node name="Sprite" type="ColorRect" parent="Field/NormalZone" index="0"]
margin_left = 25.0
margin_top = 11.0
margin_right = 49.0
margin_bottom = 43.0
mouse_filter = 2
color = Color( 0.270588, 0.266667, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/NormalZone" index="1"]
position = Vector2( 37, 27 )
shape = SubResource( 1 )

[node name="StrongZone" type="Area2D" parent="Field" index="1"]
position = Vector2( 0, 3 )

[node name="StrongZone" type="ColorRect" parent="Field/StrongZone" index="0"]
margin_left = 31.0
margin_top = 7.0
margin_right = 43.0
margin_bottom = 47.0
mouse_filter = 2
color = Color( 0.568627, 0.568627, 0.568627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/StrongZone" index="1"]
position = Vector2( 37, 27 )
shape = SubResource( 2 )

[node name="CritZone" type="Area2D" parent="Field" index="2"]
position = Vector2( 35, 20 )

[node name="ColorRect" type="ColorRect" parent="Field/CritZone" index="0"]
margin_top = -14.0
margin_right = 4.0
margin_bottom = 34.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/CritZone" index="1"]
position = Vector2( 2, 10 )
shape = SubResource( 3 )

[node name="Pointer1" type="Area2D" parent="Field" index="3"]
visible = false

[node name="Sprite" type="ColorRect" parent="Field/Pointer1" index="0"]
margin_left = 1.0
margin_top = 6.0
margin_right = 3.0
margin_bottom = 30.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/Pointer1" index="1"]
position = Vector2( 2, 18 )
shape = SubResource( 4 )

[node name="Pointer2" type="Area2D" parent="Field" index="4"]
visible = false

[node name="Sprite" type="ColorRect" parent="Field/Pointer2" index="0"]
margin_left = 1.0
margin_top = 30.0
margin_right = 3.0
margin_bottom = 54.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/Pointer2" index="1"]
position = Vector2( 2, 42 )
shape = SubResource( 4 )

[node name="BorderL" type="Area2D" parent="Field" index="5"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/BorderL" index="0"]
position = Vector2( 0, 30 )
shape = SubResource( 5 )

[node name="BorderR" type="Area2D" parent="Field" index="6"]
visible = false
position = Vector2( 72, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/BorderR" index="0"]
position = Vector2( 0, 30 )
shape = SubResource( 5 )
[connection signal="area_entered" from="Field/BorderL" to="." method="_on_BorderL_area_entered"]
[connection signal="area_entered" from="Field/BorderR" to="." method="_on_BorderR_area_entered"]
